sugar/tests/success/offer.mx
x : ! 1, q : ? _|_ |-
offer z for q in ignore x in z
