sugar/tests/fail/quest.mx
a : 1 |-
offer z for a in z
